--- a/public/status.html
+++ b/public/status.html
@@ -5,6 +5,7 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #1a1a2e; color: #eee; }
     h1 { color: #00d4ff; }
+    h2 { color: #00d4ff; margin-top: 30px; }
     .status-indicator {
       width: 100px; height: 100px; border-radius: 50%;
       margin: 20px auto; transition: background-color 0.3s;
@@ -29,6 +30,29 @@
     .stat-card { background: #16213e; padding: 15px; border-radius: 10px; text-align: center; }
     .stat-value { font-size: 28px; font-weight: bold; color: #00d4ff; }
     .stat-label { font-size: 12px; color: #888; margin-top: 5px; }
+
+    /* Metrics Panel Styles */
+    .metrics-panel { margin-top: 30px; padding: 20px; background: #16213e; border-radius: 10px; display: none; }
+    .metrics-panel.visible { display: block; }
+    .metrics-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-top: 20px; }
+    .metric-card { background: #0f3460; padding: 20px; border-radius: 10px; text-align: center; }
+    .metric-card h3 { color: #00d4ff; margin: 0 0 10px 0; font-size: 14px; }
+    .metric-count { font-size: 36px; font-weight: bold; color: #fff; }
+    .metric-rate { font-size: 14px; color: #888; margin-top: 5px; }
+    .metric-rate.success { color: #00ff88; }
+    .metric-rate.warning { color: #ffa502; }
+    .metric-rate.danger { color: #ff4757; }
+    .metric-details { display: flex; justify-content: center; gap: 20px; margin-top: 10px; font-size: 12px; }
+    .metric-detail { color: #aaa; }
+    .metric-detail span { color: #00d4ff; font-weight: bold; }
+
+    /* Queue Panel Styles */
+    .queue-panel { margin-top: 20px; padding: 20px; background: #16213e; border-radius: 10px; display: none; }
+    .queue-panel.visible { display: block; }
+    .queue-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-top: 15px; }
+    .queue-card { background: #0f3460; padding: 15px; border-radius: 8px; text-align: center; }
+    .queue-value { font-size: 32px; font-weight: bold; color: #00d4ff; }
+    .queue-label { font-size: 12px; color: #888; margin-top: 5px; }
   </style>
 </head>
 <body>
@@ -52,12 +76,79 @@
   <div id="status" class="status-indicator disconnected"></div>
   <div id="statusText" class="status-text">Disconnected</div>
 
+  <!-- Metrics Panel -->
+  <div id="metricsPanel" class="metrics-panel">
+    <h2>Message Metrics</h2>
+    <div class="metrics-grid">
+      <div class="metric-card">
+        <h3>1 Minute</h3>
+        <div id="metric-1m" class="metric-count">--</div>
+        <div id="rate-1m" class="metric-rate">--% success</div>
+        <div class="metric-details">
+          <span class="metric-detail">Sent: <span id="sent-1m">0</span></span>
+          <span class="metric-detail">Failed: <span id="failed-1m">0</span></span>
+        </div>
+      </div>
+      <div class="metric-card">
+        <h3>15 Minutes</h3>
+        <div id="metric-15m" class="metric-count">--</div>
+        <div id="rate-15m" class="metric-rate">--% success</div>
+        <div class="metric-details">
+          <span class="metric-detail">Sent: <span id="sent-15m">0</span></span>
+          <span class="metric-detail">Failed: <span id="failed-15m">0</span></span>
+        </div>
+      </div>
+      <div class="metric-card">
+        <h3>1 Hour</h3>
+        <div id="metric-1h" class="metric-count">--</div>
+        <div id="rate-1h" class="metric-rate">--% success</div>
+        <div class="metric-details">
+          <span class="metric-detail">Sent: <span id="sent-1h">0</span></span>
+          <span class="metric-detail">Failed: <span id="failed-1h">0</span></span>
+        </div>
+      </div>
+      <div class="metric-card">
+        <h3>24 Hours</h3>
+        <div id="metric-24h" class="metric-count">--</div>
+        <div id="rate-24h" class="metric-rate">--% success</div>
+        <div class="metric-details">
+          <span class="metric-detail">Sent: <span id="sent-24h">0</span></span>
+          <span class="metric-detail">Failed: <span id="failed-24h">0</span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Queue Panel -->
+  <div id="queuePanel" class="queue-panel">
+    <h2>Queue Status</h2>
+    <div class="queue-grid">
+      <div class="queue-card">
+        <div id="queue-waiting" class="queue-value">--</div>
+        <div class="queue-label">Waiting</div>
+      </div>
+      <div class="queue-card">
+        <div id="queue-active" class="queue-value">--</div>
+        <div class="queue-label">Active</div>
+      </div>
+      <div class="queue-card">
+        <div id="queue-completed" class="queue-value">--</div>
+        <div class="queue-label">Completed</div>
+      </div>
+      <div class="queue-card">
+        <div id="queue-failed" class="queue-value">--</div>
+        <div class="queue-label">Failed</div>
+      </div>
+    </div>
+  </div>
+
   <div class="event-log">
     <h3>Event Log</h3>
     <div id="events"></div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/metrics-client.js"></script>
   <script>
     const socket = io();
     const statusEl = document.getElementById('status');
@@ -66,9 +157,14 @@
     const uptimeEl = document.getElementById('uptimeValue');
     const messagesReceivedEl = document.getElementById('messagesReceived');
     const messagesFailedEl = document.getElementById('messagesFailed');
+    const metricsPanel = document.getElementById('metricsPanel');
+    const queuePanel = document.getElementById('queuePanel');
 
     let messagesReceived = 0;
     let messagesFailed = 0;
+
+    // Initialize MetricsClient
+    const metricsClient = new MetricsClient(socket);
 
     function updateStatus(status) {
       statusEl.className = 'status-indicator ' + status;
@@ -92,6 +188,60 @@
       `;
       eventsEl.insertBefore(div, eventsEl.firstChild);
     }
+
+    function updateMetricsDisplay(data) {
+      if (!data || !data.windows) return;
+
+      metricsPanel.classList.add('visible');
+
+      for (const [window, metrics] of Object.entries(data.windows)) {
+        const countEl = document.getElementById(`metric-${window}`);
+        const rateEl = document.getElementById(`rate-${window}`);
+        const sentEl = document.getElementById(`sent-${window}`);
+        const failedEl = document.getElementById(`failed-${window}`);
+
+        if (countEl && rateEl && sentEl && failedEl) {
+          const total = metrics.success + metrics.failure;
+          countEl.textContent = total;
+          rateEl.textContent = `${metrics.successRate}% success`;
+          sentEl.textContent = metrics.success;
+          failedEl.textContent = metrics.failure;
+
+          // Color code the rate
+          const rate = parseFloat(metrics.successRate);
+          rateEl.className = 'metric-rate';
+          if (rate >= 95) {
+            rateEl.classList.add('success');
+          } else if (rate >= 80) {
+            rateEl.classList.add('warning');
+          } else {
+            rateEl.classList.add('danger');
+          }
+        }
+      }
+    }
+
+    function updateQueueDisplay(data) {
+      if (!data) return;
+
+      queuePanel.classList.add('visible');
+
+      const waitingEl = document.getElementById('queue-waiting');
+      const activeEl = document.getElementById('queue-active');
+      const completedEl = document.getElementById('queue-completed');
+      const failedEl = document.getElementById('queue-failed');
+
+      if (waitingEl) waitingEl.textContent = data.waiting || 0;
+      if (activeEl) activeEl.textContent = data.active || 0;
+      if (completedEl) completedEl.textContent = data.completed || 0;
+      if (failedEl) failedEl.textContent = data.failed || 0;
+    }
+
+    // Metrics event handler
+    metricsClient.onMetrics(updateMetricsDisplay);
+
+    // Queue event handler
+    metricsClient.onQueue(updateQueueDisplay);
 
     socket.on('connect', () => {
       console.log('Connected to event stream');
